Fix layout issues in various pages

--- a/quizzerapp/src/main/resources/static/styles/main.css
+++ b/quizzerapp/src/main/resources/static/styles/main.css
@@ -160,6 +160,16 @@ textarea {
     box-sizing: border-box;
 }
 
+select {
+    font-size: 1rem;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    border-radius: 8px;
+}
+
 
 @keyframes sliding-appear {
     from {
